--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Krishan Himesh Abeyrathne</h1>
-        <p>Graduate in Network and Cybersecurity</p>
+        <h1 class="fade-in">Krishan Himesh Abeyrathne</h1>
+        <p class="fade-in">Graduate in Network and Cybersecurity</p>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact Me</a>
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="projects.html" class="nav-link">Projects</a>
+            <a href="contact.html" class="nav-link">Contact Me</a>
         </nav>
     </header>
     <main>
         <section>
-            <h2>About Me</h2>
-            <p>Information Technology Graduate with a focus on cybersecurity, experienced in network protocols, cloud platforms, and system administration.</p>
-            <a href="#projects">View My Projects</a>
+            <h2 class="slide-in">About Me</h2>
+            <p class="slide-in">Information Technology Graduate with a focus on cybersecurity, experienced in network protocols, cloud platforms, and system administration.</p>
+            <a href="#projects" class="btn">View My Projects</a>
         </section>
     </main>
     <footer>
