--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <main>
-        <form action="mailto:krishanhimesh@gmail.com" method="post" enctype="text/plain">
+        <form action="send_email.php" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
