--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section>
             <h2 class="slide-in">About Me</h2>
             <p class="slide-in">Information Technology Graduate with a focus on cybersecurity, experienced in network protocols, cloud platforms, and system administration.</p>
-            <a href="#projects" class="btn">View My Projects</a>
+            <a href="projects.html" class="btn">View My Projects</a>
         </section>
     </main>
     <footer>
