--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Contact Me</h1>
+        <h1 class="fade-in">Krishan Himesh Abeyrathne</h1>
+        <p class="fade-in">Graduate in Network and Cybersecurity</p>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact Me</a>
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="projects.html" class="nav-link">Projects</a>
+            <a href="contact.html" class="nav-link">Contact Me</a>
         </nav>
     </header>
     <main>
