--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2 class="slide-in">About Me</h2>
-            <p class="slide-in">Information Technology Graduate with a major in Cybersecurity, skilled in network security, system administration, and cloud platforms (Azure, AWS). Proficient in network protocols (TCP/IP, DNS, VPN), cybersecurity principles (encryption, threat analysis), and managing virtualized environments (VMware, VirtualBox). Strong troubleshooting abilities with a passion for AI, blockchain, and emerging technologies. Seeking an entry-level IT role to apply and grow expertise in network engineering and cybersecurity, with proven leadership and teamwork skills.</p>
-            <a href="projects.html" class="btn">View My Projects</a>
+        <section id="about">
+            <div class="box">
+                <h2 class="slide-in">About Me</h2>
+                <p class="slide-in">
+                    Information Technology Graduate with a major in Cybersecurity, skilled in network security, system administration, and cloud platforms (Azure, AWS). Proficient in network protocols (TCP/IP, DNS, VPN), cybersecurity principles (encryption, threat analysis), and managing virtualized environments (VMware, VirtualBox).
+                </p>
+                <p class="slide-in">
+                    Strong troubleshooting abilities with a passion for AI, blockchain, and emerging technologies. Seeking an entry-level IT role to apply and grow expertise in network engineering and cybersecurity, with proven leadership and teamwork skills.
+                </p>
+                <a href="projects.html" class="btn">View My Projects</a>
+            </div>
         </section>
     </main>
     <footer>
