--- a/index.html
+++ b/index.html
@@ -17,28 +17,29 @@
         </nav>
     </header>
     <main>
-		<section id="about" class="profile-section">              
-			<div class="box">
-				<h2 class="slide-in">About Me</h2>
-				<div class="profile-content">
-					<div class="photo-box">
-						<img class="slide-in" src="images/krishan.jpg" alt="Krishan Himesh Abeyrathne's Photo">
-					</div><br>
-					<div class="about-text">
-						<p class="slide-in">
-							Welcome! I am Krishan Himesh Abeyrathne, a recent graduate in Network and Cybersecurity with a strong foundation in IT and cybersecurity principles. Explore my projects and feel free to reach out!
-						</p>
-						<p class="slide-in">
-							I am skilled in network security, system administration, and cloud platforms (Azure, AWS). Proficient in network protocols (TCP/IP, DNS, VPN), cybersecurity principles (encryption, threat analysis), and managing virtualized environments (VMware, VirtualBox).
-						</p>
-						<p class="slide-in">
-							With strong troubleshooting abilities and a passion for AI, blockchain, and emerging technologies, I am eager to contribute to an entry-level IT role in network engineering and cybersecurity, where I can apply and grow my expertise.
-						</p>
-						<a href="projects.html" class="btn">View My Projects</a>
-					</div>
-				</div>
-			</div>
-		</section>
+        <section id="about" class="profile-section">              
+            <div class="box">
+                <h2 class="slide-in">About Me</h2>
+                
+                <!-- Centered Photo -->
+                <div class="photo-box slide-in">
+                    <img src="images/krishan.jpg" alt="Krishan Himesh Abeyrathne's Photo">
+                </div>
+                
+                <div class="about-text">
+                    <p class="slide-in">
+                        Welcome! I am Krishan Himesh Abeyrathne, a recent graduate in Network and Cybersecurity with a strong foundation in IT and cybersecurity principles. Explore my projects and feel free to reach out!
+                    </p>
+                    <p class="slide-in">
+                        I am skilled in network security, system administration, and cloud platforms (Azure, AWS). Proficient in network protocols (TCP/IP, DNS, VPN), cybersecurity principles (encryption, threat analysis), and managing virtualized environments (VMware, VirtualBox).
+                    </p>
+                    <p class="slide-in">
+                        With strong troubleshooting abilities and a passion for AI, blockchain, and emerging technologies, I am eager to contribute to an entry-level IT role in network engineering and cybersecurity, where I can apply and grow my expertise.
+                    </p>
+                    <a href="projects.html" class="btn">View My Projects</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Krishan Himesh Abeyrathne</p>
