update with resume

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
                 <!-- Centered Photo -->
                 <div class="photo-box slide-in">
-                    <img src="images/krishan.jpg" alt="Krishan Himesh Abeyrathne's Photo">
+                    <img src="files/krishan.jpg" alt="Krishan Himesh Abeyrathne's Photo">
                 </div>
                 
                 <div class="about-text">
@@ -36,7 +36,11 @@
                     <p class="slide-in">
                         With strong troubleshooting abilities and a passion for AI, blockchain, and emerging technologies, I am eager to contribute to an entry-level IT role in network engineering and cybersecurity, where I can apply and grow my expertise.
                     </p>
-                    <a href="projects.html" class="btn">View My Projects</a>
+						<div class="button-group">
+								<a href="projects.html" class="btn">View My Projects</a>
+								<a href="files/KrishanHimeshAbeyrathne.pdf" class="btn" download="KrishanHimeshAbeyrathne_Resume.pdf">Download Resume</a>
+								<a href="files/KrishanHimeshAbeyrathne.pdf" class="btn" target="_blank">View Resume</a>
+						</div>
                 </div>
             </div>
         </section>
