--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                     </p>
 						<div class="button-group">
 								<a href="projects.html" class="btn">View My Projects</a>
-								<a href="files/KrishanHimeshAbeyrathne.pdf" class="btn" download="KrishanHimeshAbeyrathne_Resume.pdf">Download Resume</a>
-								<a href="files/KrishanHimeshAbeyrathne.pdf" class="btn" target="_blank">View Resume</a>
+								<a href="files/KrishanHimeshAbeyrathne.pdf" class="btn" target="_blank">View My Resume</a>
 						</div>
                 </div>
             </div>
