--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,9 @@
                 <h2>3. BiZChat – AI Chatbot</h2>
                 <p>BiZChat is an AI-powered business advisor chatbot designed to assist small business owners in decision-making. Built using Dialogflow and the ChatGPT API, BiZChat integrates speech recognition capabilities and a Python-based graphical user interface (GUI).</p>
                 <p>The chatbot provides users with quick answers to common business questions, enhancing accessibility to business advisory information. This project showcased my skills in natural language processing, AI integration, and GUI development.</p>
+				<div class="video-container">
+                    <iframe width="1280" height="720" src="https://www.youtube.com/embed/kewKZ5KJDs8" title="BiZChat: AI Business Advisory Chatbot Built with Dialogflow &amp; ChatGPT | COIT12213 Project" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
             </section>
         </div>
 
